# Senjibot

./: balance.json  currency.py  main.py  pyproject.toml  webserver.py
cogs/: currency.py
