[tool.poetry]
name = "repl_python3_Senjibot"
version = "0.1.0"
description = "Main code of Senjibot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
enhanced-dpy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
